@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2006-2011, 2015 by Adam Deller                                *
+ *   Copyright (C) 2006-2011, 2015 by Adam Deller                          *
  *                                                                         *
  *   This program is free for non-commercial use: see the license file     *
  *   at http://astronomy.swin.edu.au:~adeller/software/difx/ for more      *
