@@ -41,6 +41,8 @@ Version 2.5
 ~~~~~~~~~~~
 * Another 0.5ns jitter was found in Mark5B processing for data rates >= 2 Gbps.  This is now filed (2015 Feb 22 -- WFB)
 * Slightly more instructive messages when model files have disagreements with .calc files.
+* Check for time disagreements in polyco headers: the fractional MJD is supposed to be definitive, while the HHMMSS value can be rounded
+* Support .im files that contain some additional information (mpifxcorr now just ignores the info)
 
 Version 2.4
 ~~~~~~~~~~~
